# snaak_shredded_grasp

./: CMakeLists.txt  package.xml
launch/: shredded_grasp_launch.py
models/: mass_estimation_model_lettuce.pth  mass_estimation_model_onions.pth
scripts/: classical_grasp_utils.py  granular_grasp_utils.py  snaak_shredded_grasp_constants.py  snaak_shredded_grasp_node.py  snaak_shredded_grasp_utils.py
srv/: GetGraspPose.srv
